--- a/docs/assets/css/src/docs.css
+++ b/docs/assets/css/src/docs.css
@@ -511,6 +511,10 @@ h4 code {
   background-color: #f2f2f2;
   padding: 13px;
   border: 1px solid #ccc;
+  position: -webkit-sticky;
+  position:         sticky;
+  top: 0;
+  z-index: 1;
 }
 
 .bs-docs-sidenav {
@@ -557,7 +561,7 @@ h4 code {
 /* Nav: second level (shown on .active) */
 
 .bs-docs-sidebar .nav .nav {
-  display: none;
+  /* display: none; */
   /* Hide by default, but at >768px, show it */
   padding-bottom: 10px;
 }
