Blockquote line height

--- a/docs/assets/css/unit-frontpages/unit-frontpage.css
+++ b/docs/assets/css/unit-frontpages/unit-frontpage.css
@@ -127,7 +127,7 @@
 
   .double-column .gccolumn blockquote.full-width {
     font-size: 20px;
-    line-height: 1.3333333;
+    line-height: 1.5;
     font-weight: 600;
     padding: 0 20px;
   }
