--- a/docs/assets/css/doctypes/visualfeature.css
+++ b/docs/assets/css/doctypes/visualfeature.css
@@ -737,6 +737,10 @@ video {
     display: flex;
     align-items: center;
   }
+
+  .single-column .column1 .tiles-x .tilebox .tile-content {
+    padding: 15px 20px 20px 20px
+  }
 }
 
 @media (max-width: 767px) {
