--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -285,13 +285,13 @@ body:not(.FullWidthFrontpage) .double-column {
       }
     }
 
-    .single-column & {
-      .tiles-x {
-        .tilebox {
-          height: auto;
-        }
-      }
-    }
+    // .single-column & {
+    //   .tiles-x {
+    //     .tilebox {
+    //       height: auto;
+    //     }
+    //   }
+    // }
   }
 
   .topnews {
