--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -368,6 +368,7 @@ form.gdpr-accept {
 .image-presentation {
   position: relative;
   overflow: hidden;
+  max-height: 410px;
 
   &>.slick-slide {
     display: block;
