--- a/less/tables.less
+++ b/less/tables.less
@@ -274,7 +274,7 @@ table {
     overflow-y: hidden;
     -webkit-overflow-scrolling: touch;
     -ms-overflow-style: -ms-autohiding-scrollbar;
-    border: 1px solid @table-border-color;
+    // border: 1px solid @table-border-color;
     // Tighten up spacing
     // > .table {
     //   margin-bottom: 0;
